<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="errand.com.my.errands.fragment.ProfileFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/bck"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name" />


    <errand.com.my.credoshopper.views.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/placeholder" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/app_name" />
        <errand.com.my.credoshopper.views.PoppinsBoldTextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_below="@+id/buttonEdit"/>

        <errand.com.my.credoshopper.views.PoppinsLightTextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textColor="@color/red"
            android:layout_below="@+id/i"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <errand.com.my.credoshopper.views.PoppinsBoldTextView
            android:id="@+id/ii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textName"
            android:text="@string/email"/>
        <errand.com.my.credoshopper.views.PoppinsLightTextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_below="@+id/ii"
            android:text="@string/nav_header_subtitle"
            android:layout_marginBottom="10dp"/>
        <errand.com.my.credoshopper.views.PoppinsBoldTextView
            android:id="@+id/iii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEmail"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_below="@+id/iii"
            android:text="@string/phone"
            android:layout_marginBottom="10dp"/>
        <errand.com.my.credoshopper.views.PoppinsBoldTextView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPhone"
            android:text="@string/address"/>
        <errand.com.my.credoshopper.views.PoppinsLightTextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_below="@+id/iv"
            android:text="@string/address"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>