<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="errand.com.my.errands.child_fragment.CreateErrandsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <errand.com.my.credoshopper.views.PoppinsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_errand"/>

            <errand.com.my.credoshopper.views.PoppinsBoldTextView
                android:id="@+id/errandType"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/type_of_errand"
                android:layout_gravity="bottom"
                android:gravity="bottom"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delivery_address"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/linearPick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/spinnerWhich"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editBudget"
                        android:drawableLeft="@drawable/ic_nigeria_naira"
                        android:drawableStart="@drawable/ic_nigeria_naira"
                        android:drawablePadding="10dp"
                        android:layout_width="200dp"
                        android:layout_gravity="end"
                        android:layout_height="wrap_content"
                        android:hint="@string/budget_amount"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
                <TableRow
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <errand.com.my.credoshopper.views.PoppinsBoldTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/items_list"/>
                    <errand.com.my.credoshopper.views.PoppinsBoldTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/amount"
                        android:drawableStart="@drawable/ic_nigeria_naira"
                        android:drawableLeft="@drawable/ic_nigeria_naira"
                        android:padding="4dp"/>

                </TableRow>
                <TableRow
                    android:orientation="vertical"
                    android:weightSum="2">
                    <EditText
                        android:id="@+id/errandList"
                        android:layout_weight="1.4"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:inputType="textMultiLine"
                        android:background="@drawable/line_grey"/>
                    <EditText
                        android:id="@+id/errandAmt"
                        android:layout_weight="0.6"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:minHeight="200dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:background="@drawable/line_grey"/>
                </TableRow>
            </TableLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTransportAmt"
                    android:drawableLeft="@drawable/ic_nigeria_naira"
                    android:drawableStart="@drawable/ic_nigeria_naira"
                    android:drawablePadding="10dp"
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:hint="@string/transport_amount"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <errand.com.my.credoshopper.views.PoppinsBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgency"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/spinnerTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>

            <errand.com.my.credoshopper.views.PoppinsButton
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/send_errand"
                android:background="@drawable/curve_lighter"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="20sp"
                android:textColor="@color/red"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>