<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bck"
    tools:context=".activity.LoginActivity">

    <errand.com.my.credoshopper.views.PoppinsBoldTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.33"/>
    <android.support.v7.widget.CardView
        android:id="@+id/holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_margin="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <errand.com.my.credoshopper.views.PoppinsEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <errand.com.my.credoshopper.views.PoppinsEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    </android.support.v7.widget.CardView>
    <errand.com.my.credoshopper.views.PoppinsButton
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/lighter"
        android:background="@drawable/curve_red"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_margin="30dp"
        />
</android.support.constraint.ConstraintLayout>